<resources>
    <string name="app_name">News App Stage 2</string>
    <string name="action_settings">Settings</string>

    <string name="title">News app part I</string>
    <string name="help_refresh">Refresh the news list</string>
    <string name="help_add">Add extra 30 elements to the list</string>
    <string name="loading">Loading...</string>
    <string name="error">Something went wrong! :(</string>
    <string name="placeholder">Placeholder</string>
    <string name="category">Category:</string>
    <string name="author">Author: </string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News App Settings</string>
    <string name="settings_page">1</string>

    <string name="settings_page_size_to_load_label">Items to load:</string>
    <string name="settings_page_size_to_load">1</string>
    <string name="settings_find">Leave empty for any</string>
    <string name="settings_find_label">Search keyword:</string>
    <string name="settings_category_label">Category:</string>
    <string name="settings_category">sport</string>
    <string name="settings_order_label">Order by:</string>
    <string name="settings_order">relevance</string>

    <string name="settings_order_by_relevance">relevance</string>
    <string name="settings_order_by_newest">newest</string>
    <string name="settings_order_by_oldest">oldest</string>

    <string name="settings_cat_sport">sport</string>
    <string name="settings_cat_global">global</string>
    <string name="settings_cat_football">football</string>
    <string name="settings_cat_news">news</string>
    <string name="settings_cat_lifeandstyle">lifeandstyle</string>
    <string name="settings_cat_science">science</string>
    <string name="settings_cat_stage">stage</string>
    <string name="settings_cat_books">books</string>
    <string name="settings_cat_media">media</string>

</resources>
