<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_find"
        android:inputType="text"
        android:key="@string/settings_find"
        android:selectAllOnFocus="true"
        android:title="@string/settings_find_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_to_load"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_size_to_load"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_size_to_load_label" />

    <ListPreference
        android:defaultValue="@string/settings_cat_sport"
        android:entries="@array/settings_categories_array"
        android:entryValues="@array/settings_categories_array"
        android:key="@string/settings_category"
        android:title="@string/settings_category_label" />

    <ListPreference
        android:defaultValue="@string/settings_order"
        android:entries="@array/settings_order_array"
        android:entryValues="@array/settings_order_array"
        android:key="@string/settings_order"
        android:title="@string/settings_order_label" />
</PreferenceScreen>