<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loading_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/loadingBk"
        android:gravity="center"
        android:padding="@dimen/_4dp"
        android:text="@string/loading"
        android:textColor="@color/loadingColor"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/info_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8dp"
                android:src="@drawable/reload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16dp"
                android:gravity="center"
                android:text="@string/help_refresh"
                android:textSize="@dimen/help_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/error"
            android:textSize="@dimen/error_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/news_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>
