<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/individual_news"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:id="@+id/individual_news_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@style/OneListItemTitle" />

    <LinearLayout
        android:id="@+id/wrapper_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/author" />

        <TextView
            android:id="@+id/individual_author"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category" />

        <TextView
            android:id="@+id/individual_category"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8dp"
            android:text="@string/placeholder" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/individual_news_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder" />

        <TextView
            android:id="@+id/individual_news_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/placeholder" />
    </LinearLayout>
</LinearLayout>